Updated HTML for Family Registration

--- a/html/EstablishProfile-Step3.html
+++ b/html/EstablishProfile-Step3.html
@@ -82,8 +82,9 @@
       <div class="row">
         <div class="col-xs-12"> <img src="images/bannerImage.jpg" class="img-responsive" alt=""/> </div>
       </div>
-      <div class="row marginTop20">
-        <div class="col-xs-12 h1 txtBlue ">Establish Profile</div>
+     <div class="row marginTop20">
+        <div class="col-xs-12 col-sm-6 h1 txtBlue ">Establish Profile</div>
+        <div class="col-xs-12 col-sm-6 txtBlue font1dot5em"><span class="stepCount">Step <span class="badge alert-info font1em">3</span> of <span class="badge alert-info font1em">4</span><span></div>
       </div>
       <div class="row">
         <div class="col-xs-12">
@@ -185,8 +186,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-6 col-sm-offset-3">
-            <input class="btn btn-primary" value="Save" type="button">
-            <input class="btn btn-default" value="Cancel" type="button">
+            <input class="btn btn-primary" value="Save" type="button" onClick="location.href='EstablishProfile-Step4.html'"> <input class="btn btn-default" value="Cancel" type="button"  onClick="location.href='EstablishProfile-Step2.html'">
           </div>
         </div>
       </div>
@@ -242,7 +242,7 @@
         <li><a href="#">Behance</a></li>
         <li><a href="#">Dribbble</a></li>
         <li><a href="#">GitHub</a></li>
-        <li><a href="#">Report an Incident</a></li>
+        <li><a href="#">Report Tech Issue</a></li>
       </ul>
     </div>
   </div>
