--- a/html/EstablishProfile-Step4.html
+++ b/html/EstablishProfile-Step4.html
@@ -84,7 +84,8 @@
         <div class="col-xs-12"> <img src="images/bannerImage.jpg" class="img-responsive" alt=""/> </div>
       </div>
       <div class="row marginTop20">
-        <div class="col-xs-12 h1 txtBlue ">Establish Profile</div>
+        <div class="col-xs-12 col-sm-6 h1 txtBlue ">Establish Profile</div>
+        <div class="col-xs-12 col-sm-6 txtBlue font1dot5em"><span class="stepCount">Step <span class="badge alert-info font1em">4</span> of <span class="badge alert-info font1em">4</span><span></div>
       </div>
       <div class="row">
         <div class="col-xs-12">
@@ -109,13 +110,12 @@
           </div>
         </div>
         <div class="form-group required">
-          <label for="inputPassword" class="control-label col-sm-3 paddingTop7">License Number</label>
-          <div class="col-sm-6">
+          <label for="inputPassword" class="control-label col-sm-2 paddingTop7">License Number</label>
+          <div class="col-sm-3">
             <input class="form-control">
           </div>
-        </div>
-        <div class="form-group">
-          <label class="col-xs-3 control-label">Date of Issue(DD/MM/YYYY)</label>
+       
+          <label class="col-sm-2 control-label">Date of Issue</label>
           <div class="col-sm-3 ">
                <div class="input-append date form-control" id="dp3" data-date-format="dd-mm-yyyy">
                   <input class="span2" size="16" type="text" value="">
@@ -125,16 +125,19 @@
         </div>
         
         <div class="form-group required">
-          <label class="col-xs-3 control-label">Agency's Contact Number</label>
-          <div class="col-sm-6">
+         <label class="col-xs-2 control-label">Agency Case Worker</label>
+          <div class="col-sm-3">
+            <input class="form-control">
+          </div>
+          <label class="col-xs-2 control-label">Agency's Contact Number</label>
+          <div class="col-sm-3">
             <input class="form-control">
           </div>
         </div>
         <div class="form-group">
-          <label for="inputPassword" class="control-label col-sm-3 paddingTop7"> </label>
+          <label for="inputPassword" class="control-label col-sm-5 paddingTop7"> </label>
           <div class="col-sm-6">
-            <button type="submit" class="btn btn-primary">Save</button>
-            <button type="submit" class="btn btn-default">Cancel</button>
+            <input class="btn btn-primary" value="Save" type="button" onClick="location.href='EstablishProfile-ThankYou.html'"> <input class="btn btn-default" value="Cancel" type="button"  onClick="location.href='EstablishProfile-Step3.html'">
           </div>
         </div>
       </div>
@@ -190,7 +193,7 @@
         <li><a href="#">Behance</a></li>
         <li><a href="#">Dribbble</a></li>
         <li><a href="#">GitHub</a></li>
-<li><a href="#">Report an Incident</a></li>
+<li><a href="#">Report Tech Issue</a></li>
       </ul>
     </div>
   </div>
