--- a/html/EstablishProfile-ThankYou.html
+++ b/html/EstablishProfile-ThankYou.html
@@ -97,8 +97,8 @@
       </div>
       <div class="alert alert-warning marginTop20">
                                 
-                                <p class="text-center">Thank you for registering with Us. Your effort to become foster parent is highly appreciated your application is under verification. Our team will contact you soon.</p>
-                                <p class="text-center"><button type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-home"></i> Back to Home</button></p>
+                                <p class="text-center">Thank you for registering with Us. Your effort to become foster parent is highly appreciated your application is under verification. Our team will contact you soon. You would shortly receive an email from us.</p>
+                                <p class="text-center"><button type="submit" class="btn btn-primary" onClick="location.href='MyApplication.html'"><i class="glyphicon glyphicon-home"></i> My Page</button></p>
                 </div>
 
       
@@ -152,7 +152,7 @@
         <li><a href="#">Behance</a></li>
         <li><a href="#">Dribbble</a></li>
         <li><a href="#">GitHub</a></li>
-<li><a href="#">Report an Incident</a></li>
+<li><a href="#">Report Tech Issue</a></li>
       </ul>
     </div>
   </div>
