--- a/html/default.html
+++ b/html/default.html
@@ -159,7 +159,7 @@
 			  <li><a href="#">Behance</a></li>
 			  <li><a href="#">Dribbble</a></li>
 			  <li><a href="#">GitHub</a></li>
-<li><a href="#">Report an Incident</a></li>
+<li><a href="#">Report Tech Issue</a></li>
 			</ul>
 			
 		</div>
