Added manage profile pages, Lookup pages, inbox and updated existing html

--- a/html/EligibilityCriteria.html
+++ b/html/EligibilityCriteria.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="container whitebg">
-  <div class="">
+  <div class="MainContainer">
     <header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-2"><a href="default.html"><img src="images/logo.png" class="img-responsive logo" alt=""/></a></div>
@@ -116,7 +116,7 @@
 			<li>Must have no criminal background</li>
 			<li>Should have regular source of income… </li>
 		</ul>
-		<button class="btn btn-primary">Read More</button>
+		<button class="btn btn-info">Read More</button>
 	  </div>
     </div><!-- /.row -->
 	<div class="row marginBottom10 marginTop10">
@@ -145,7 +145,7 @@
 	</div><!-- /.row -->
 	<div class="row marginTop10">
       <div class="col-md-12">
-		<button class="btn btn-primary disabled" onClick="location.href='EstablishProfile-Step1.html'">Next</button>
+		<button class="btn btn-primary" onClick="location.href='EstablishProfile-Step1.html'">Next</button>
 	  </div>
     </div><!-- /.row -->
 	<div class="row ">
@@ -159,14 +159,14 @@
 		 </div><!-- /.row -->
 		 <div class="row marginTop10">
 		  <div class="col-sm-5">
-			<input type="text" class="form-control" placeholder="Your Name*">
-		  </div>
-		  <div class="col-sm-5">
-			<input type="text" class="form-control" placeholder="Your Email*">
-		  </div>
-		  <div class="col-sm-2">
-			<input type="text" class="form-control" placeholder="Mobile">
-		  </div>
+              <input type="text" class="form-control marginBottom10" placeholder="Your Name*">
+            </div>
+            <div class="col-sm-5">
+              <input type="text" class="form-control marginBottom10" placeholder="Your Email*">
+            </div>
+            <div class="col-sm-2">
+              <input type="text" class="form-control marginBottom10" placeholder="Mobile">
+            </div>
 		</div><!-- /.row -->
 		<div class="row marginTop10">
 		  <div class="col-sm-12">
