--- a/html/EstablishProfile-ThankYou.html
+++ b/html/EstablishProfile-ThankYou.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="container whitebg">
-  <div class="">
+  <div class="MainContainer">
     <header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-2"><a href="default.html"><img src="images/logo.png" class="img-responsive logo" alt=""/></a></div>
@@ -114,13 +114,13 @@
           <!-- /.row -->
           <div class="row marginTop10">
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="Your Name*">
+              <input type="text" class="form-control marginBottom10" placeholder="Your Name*">
             </div>
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="Your Email*">
+              <input type="text" class="form-control marginBottom10" placeholder="Your Email*">
             </div>
             <div class="col-sm-2">
-              <input type="text" class="form-control" placeholder="Mobile">
+              <input type="text" class="form-control marginBottom10" placeholder="Mobile">
             </div>
           </div>
           <!-- /.row -->
