--- a/html/default.html
+++ b/html/default.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="container whitebg">
-  <div class="">
+  <div class="MainContainer">
     <header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-2"><a href="default.html"><img src="images/logo.png" class="img-responsive logo" alt=""/></a></div>
@@ -108,10 +108,10 @@
 </div>
     
      <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb1.png" border="0" class="img-responsive" /></div>
-      <div class="col-xs-12 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb2.png" border="0" class="img-responsive" /></div>
-	  <div class="col-xs-12 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb3.png" border="0" class="img-responsive" /></div>
-      <div class="col-xs-12 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb4.png" border="0" class="img-responsive" /></div>
+      <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb1.png" border="0" class="img-responsive" /></div>
+      <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb2.png" border="0" class="img-responsive" /></div>
+	  <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb3.png" border="0" class="img-responsive" /></div>
+      <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="images/homeThmb4.png" border="0" class="img-responsive" /></div>
     </div>
 	<div class="row ">
       <div class="col-md-10 col-md-offset-1">
@@ -124,14 +124,14 @@
 		 </div><!-- /.row -->
 		 <div class="row marginTop10">
 		  <div class="col-sm-5">
-			<input type="text" class="form-control" placeholder="Your Name*">
-		  </div>
-		  <div class="col-sm-5">
-			<input type="text" class="form-control" placeholder="Your Email*">
-		  </div>
-		  <div class="col-sm-2">
-			<input type="text" class="form-control" placeholder="Mobile">
-		  </div>
+              <input type="text" class="form-control marginBottom10" placeholder="Your Name*">
+            </div>
+            <div class="col-sm-5">
+              <input type="text" class="form-control marginBottom10" placeholder="Your Email*">
+            </div>
+            <div class="col-sm-2">
+              <input type="text" class="form-control marginBottom10" placeholder="Mobile">
+            </div>
 		</div><!-- /.row -->
 		<div class="row marginTop10">
 		  <div class="col-sm-12">
