--- a/html/EstablishProfile-Step2.html
+++ b/html/EstablishProfile-Step2.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="container whitebg">
-  <div class="">
+  <div class="MainContainer">
     <header>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-2"><a href="default.html"><img src="images/logo.png" class="img-responsive logo" alt=""/></a></div>
@@ -93,7 +93,7 @@
             <li ><a href="EstablishProfile-Step1.html">Account Detail</a></li>
             <li class="active" ><a href="EstablishProfile-Step2.html">Personal Information</a></li>
             <li ><a href="EstablishProfile-Step3.html">Family Narrative &amp; Preferences</a></li>
-            <li ><a href="EstablishProfile-Step4.html">Licensing  &amp; Agency Detail</a></li>
+            <li ><a href="EstablishProfile-Step4.html">License &amp; Agency Detail</a></li>
           </ul>
         </div>
       </div>
@@ -261,7 +261,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-12 text-center">
-           <input class="btn btn-primary" value="Save" type="button" onClick="location.href='EstablishProfile-Step3.html'"> <input class="btn btn-default" value="Cancel" type="button"  onClick="location.href='EstablishProfile-Step1.html'">
+           <input class="btn btn-primary" value="Save" type="button" onClick="location.href='EstablishProfile-Step3.html'"> <input class="btn btn-default" value="Save & Exit" type="button"  onClick="location.href='default.html'">
           </div>
         </div>
       </div>
@@ -280,13 +280,13 @@
           <!-- /.row -->
           <div class="row marginTop10">
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="Your Name*">
+              <input type="text" class="form-control marginBottom10" placeholder="Your Name*">
             </div>
             <div class="col-sm-5">
-              <input type="text" class="form-control" placeholder="Your Email*">
+              <input type="text" class="form-control marginBottom10" placeholder="Your Email*">
             </div>
             <div class="col-sm-2">
-              <input type="text" class="form-control" placeholder="Mobile">
+              <input type="text" class="form-control marginBottom10" placeholder="Mobile">
             </div>
           </div>
           <!-- /.row -->
