--- a/html/ManageProfile-Step3.html
+++ b/html/ManageProfile-Step3.html
@@ -7,7 +7,7 @@
 <title>CHHS</title>
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
-
+<link href="css/datepicker.css" rel="stylesheet">
 <!--Custom CSS-->
 <link href="css/portal.css" rel="stylesheet">
 
@@ -27,19 +27,10 @@
         <div class="col-xs-12 col-sm-9 col-md-10"><!--Navigation-->
           <div class="text-right" id="loginNavContainer">
             <ul class="loginNav" id="loginNav">
-              <li class="dropdown login" role="presentation"> <a aria-expanded="false" aria-haspopup="true" role="button" href="#" data-toggle="dropdown" class="dropdown-toggle login">Login</a>
-                <ul class="dropdown-menu">
-                  <li> <span class="glyphicon glyphicon-user loginboxUsericon"></span>
-                    <div class="userLoginBox form-group">
-                      <input type="text" class="form-control txtBoxLoginBox" placeholder="Username" value="Username" onFocus="if(this.value=='Username')this.value=''" onBlur="if(this.value=='')this.value='Username'">
-                      <input type="password" class="form-control txtBoxLoginBox marginTop10" placeholder="Password" value="Password" onFocus="if(this.value=='Password')this.value=''" onBlur="if(this.value=='')this.value='Password'">
-                      <button type="submit" class="btn btn-primary btn-search  marginTop10" onclick="location.href='MyApplication.html'">LOGIN</button>
-                      <a href="#" class="forgotPwd">Forgot Password?</a> </div>
-                  </li>
-                </ul>
-              </li>
+              <li class="login hidden-xs" role="presentation"> <a class="login">Welcome Robert Wordsworth</a> </li>
               <li><a href="#">Help</a></li>
               <li><a href="#">About Us</a></li>
+              <li><a href="default.html">Logout</a></li>
             </ul>
           </div>
           <div class="topNavigation">
@@ -48,7 +39,7 @@
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-              </div>
+                <span class="spn_welcome">Welcome Robert Wordsworth</span> </div>
               
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-navbar">
@@ -82,25 +73,42 @@
       <div class="row">
         <div class="col-xs-12"> <img src="images/bannerImage.jpg" class="img-responsive" alt=""/> </div>
       </div>
-     <div class="row marginTop20">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue ">Establish Profile</div>
-        <div class="col-xs-12 col-sm-6 txtBlue font1dot5em"><span class="stepCount">Step <span class="badge alert-info font1em">3</span> of <span class="badge alert-info font1em">4</span><span></div>
+      <div class="row marginTop20">
+        <div class="col-xs-12 h1 txtBlue ">Manage Profile</div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <ul class="nav nav-pills nav-justified tabPills">
-            <li ><a href="EstablishProfile-Step1.html">Account Detail</a></li>
-            <li ><a href="EstablishProfile-Step2.html">Personal Information</a></li>
-            <li  class="active"><a href="EstablishProfile-Step3.html">Family Narrative &amp; Preferences</a></li>
-            <li ><a href="EstablishProfile-Step4.html">License &amp; Agency Detail</a></li>
-          </ul>
+        <div class="col-sm-3 leftNav"><!--Left Nav-->
+          <div class="row">
+            <div class="col-xs-12">
+              <ul class="nav nav-pills tabPills  nav-stacked">
+                <li><a href="MyApplication.html">My Page</a></li>
+                <li class="active"><a href="#">Manage Profile</a></li>
+                <li><a href="childResidentialFacility.html">Child Residential Facility</a></li>
+			<li><a href="fosterCareAgency.html">Foster Care Agency</a></li>
+<li><a href="inbox.html">Inbox</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="form-horizontal marginTop20">
+        <div class="col-sm-9 rightSection">
+          <div class="row">
+            <div class="col-xs-12">
+              <ul class="nav nav-pills nav-justified tabPills">
+                <li ><a href="ManageProfile-Step1.html">Update<br/>
+                  Account Detail</a></li>
+                <li ><a href="ManageProfile-Step2.html">Update<br/>
+                  Personal Information</a></li>
+                <li  class="active"><a href="ManageProfile-Step3.html">Update Family
+                  Narrative &amp; Preferences</a></li>
+                <li ><a href="ManageProfile-Step4.html">Update License &amp; Agency Detail</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="form-horizontal marginTop20">
         <div class="form-group required">
           <label for="inputPassword" class="control-label col-sm-3 paddingTop7">Please provide as much information to describe you and your family. </label>
           <div class="col-sm-6">
-            <textarea type="text" class="form-control"></textarea>
+            <textarea type="text" class="form-control">We have three members in our family. 2 adults and 1 child. We are living in our own house with modern facilities.</textarea>
           </div>
         </div>
         <div class="form-group required">
@@ -108,7 +116,7 @@
           <div class="col-sm-6">
             <p>
               <label>
-                <input type="radio" name="RadioGroup1" value="radio" id="RadioGroup1_0" onClick="showNumofKids(1)">
+                <input type="radio" name="RadioGroup1" value="radio" id="RadioGroup1_0" onClick="showNumofKids(1)" checked>
                 Yes</label>
               &nbsp;
               <label>
@@ -118,23 +126,23 @@
             </p>
           </div>
         </div>
-        <div class="form-group  required hideMe" id="dv_numofkids">
+        <div class="form-group  required" id="dv_numofkids">
           <label for="inputPassword" class="control-label col-sm-3 paddingTop7">Number of Kids</label>
           <div class="col-sm-3">
             <select class="form-control" id="ddl_numofKids" onChange="showKidsDetails()">
               <option>Select</option>
-              <option>1</option>
+              <option value="" selected>1</option>
               <option>2</option>
             </select>
           </div>
         </div>
-        <div class="panel panel-default hideMe" id="dv_FirstKid">
+        <div class="panel panel-default" id="dv_FirstKid">
           <div class="panel-heading"><b>First Kid Details</b></div>
           <div class="panel-body">
             <div class="form-group required">
               <label for="inputPassword" class="control-label col-sm-3 paddingTop7">Name</label>
               <div class="col-sm-6">
-                <input class="form-control">
+                <input class="form-control" value="Alan">
               </div>
             </div>
             <div class="form-group required ">
@@ -142,13 +150,14 @@
               <div class="col-sm-3">
                 <select class="form-control">
                   <option>Select</option>
+                  <option selected>6-8 Yrs</option>
                 </select>
               </div>
             </div>
             <div class="form-group required">
               <label for="inputPassword" class="control-label col-sm-3 paddingTop7">Hobbies</label>
               <div class="col-sm-6">
-                <input class="form-control">
+                <input class="form-control" value="Soccer">
               </div>
             </div>
           </div>
@@ -181,18 +190,19 @@
         <div class="form-group required">
           <label for="inputPassword" class="control-label col-sm-3 paddingTop7">Please be open in expressing your Kids behaviour, emotional and other preferences</label>
           <div class="col-sm-6">
-            <textarea type="text" class="form-control"></textarea>
+            <textarea type="text" class="form-control">We have a school going kid, age around 7 years. Kid is highly enthusiastic, proactive and good in studies. He is fun loving and enjoy playing soccer</textarea>
           </div>
         </div>
         <div class="form-group">
           <div class="col-sm-6 col-sm-offset-3">
-            <input class="btn btn-primary" value="Save" type="button" onClick="location.href='EstablishProfile-Step4.html'"> <input class="btn btn-default" value="Save & Exit" type="button"  onClick="location.href='default.html'">
+            <input class="btn btn-primary" value="Update" type="button" onClick="location.href='ManageProfile-Step4.html'">
+           	<input class="btn btn-default" value="Cancel" type="button"  onClick="location.href='ManageProfile-Step2.html'">
           </div>
         </div>
       </div>
-      <!-- /.form-horizontal -->
-      
-      <div class="row lightGrayBG ">
+          <!-- /.form-horizontal --></div>
+      </div>
+      <div class="row lightGrayBG marginTop20">
         <div class="col-md-10 col-md-offset-1">
           <div class="row marginTop10">
             <div class="col-md-12 text-center">
@@ -251,6 +261,7 @@
 <script src="js/jquery.min.js"></script> 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.min.js"></script> 
+<script src="js/bootstrap-datepicker.js"></script> 
 <script language="javascript">
 
 function moveSecondaryNav() {
