Updated HTML pages

--- a/html/EligibilityCriteria.html
+++ b/html/EligibilityCriteria.html
@@ -54,7 +54,7 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
-                  <li><a href="#">Home</a></li>
+                  <li class="active"><a href="default.html">Home</a></li>
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">For Families</a></li>
                   <li><a href="#">Training</a></li>
@@ -84,32 +84,13 @@
       </div>
     </header>
     <section>
-    	<div id="myCarousel" class="carousel slide marginBottom10" data-ride="carousel">
- 
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="images/homepagebanner.jpg" alt="Family Registration" class="fixedHeight">
-      <div class="carousel-caption">
-      <div class="carouselContentBG txtUppercase txtItalic">
-        <h2>HOLD THE HANDS</h2>
-<h4>your little effort can make the</h4>
-<h4>great difference in someone’s life</h4>
-<h2>BECOME A FOSTER PARENT.</h2></div><br/>
-      <h3><a href="#" class="carouselContentBG">Family Registration <i class="glyphicon glyphicon glyphicon-forward"></i></a></h3>
-       
+    	<div class="row">
+        <div class="col-xs-12"> <img src="images/bannerImage.jpg" class="img-responsive" alt=""/> </div>
       </div>
-    </div>
-
-  </div>
-
- 
-</div>
     
     <div class="row">
       <div class="col-md-12">
-		<h1 class="txtBlue txtNormal">Eligibility Criteria for Foster Parent</h1>
+		<h1 class="txtBlue txtNormal">Eligibility Criteria to become Foster Parent</h1>
 		</br>
 		<ul>
 			<li>You must be min. 21 years of age</li>
@@ -148,7 +129,7 @@
 		<button class="btn btn-primary" onClick="location.href='EstablishProfile-Step1.html'">Next</button>
 	  </div>
     </div><!-- /.row -->
-	<div class="row ">
+	<div class="row lightGrayBG marginTop10">
       <div class="col-md-10 col-md-offset-1">
 		 <div class="row marginTop10">
 		  <div class="col-sm-12 text-center">
@@ -191,8 +172,6 @@
 			  <li><a href="#">Twitter</a></li>
 			  <li><a href="#">Google+</a></li>
 			  <li><a href="#">LinkedIn</a></li>
-			  <li><a href="#">Behance</a></li>
-			  <li><a href="#">Dribbble</a></li>
 			  <li><a href="#">GitHub</a></li>
 <li><a href="#">Report Tech Issue</a></li>
 			</ul>
