--- a/html/EstablishProfile-Step1.html
+++ b/html/EstablishProfile-Step1.html
@@ -53,7 +53,7 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home</a></li>
+                  <li class="active"><a href="default.html">Home</a></li>
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">For Families</a></li>
                   <li><a href="#">Training</a></li>
@@ -173,8 +173,6 @@
         <li><a href="#">Twitter</a></li>
         <li><a href="#">Google+</a></li>
         <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">Behance</a></li>
-        <li><a href="#">Dribbble</a></li>
         <li><a href="#">GitHub</a></li>
         <li><a href="#">Report Tech Issue</a></li>
       </ul>
