Updated HTML for UI Changes

--- a/html/EstablishProfile-Step1.html
+++ b/html/EstablishProfile-Step1.html
@@ -121,9 +121,8 @@
             </ol>
         </div>
 	</div>
-    <section>
-      <div class="row marginTop20 lightGrayBG">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue marginTop7">Register Profile</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Register Profile</div>
         <div class="col-xs-12 col-sm-6 txtBlue font1dot5em" ><span class="stepCount">Step <span class="badge alert-info font1em">1</span> of <span class="badge alert-info font1em">4</span><span></div>
       </div>
       <div class="row">
@@ -171,7 +170,7 @@
         </div>
       </div>
       <!-- /.form-horizontal --></div>
-      	<div class="col-sm-5 marginTop20">
+      	<div class="col-sm-5 marginTop20 LeftDivider">
         <img src="images/registerFiller.jpg" width="388" height="408" alt="" class="img-responsive"/> </div>        
       </div>
       
