--- a/html/EstablishProfile-Step2.html
+++ b/html/EstablishProfile-Step2.html
@@ -121,8 +121,8 @@
             </ol>
         </div>
 	</div>
-    <section> <div class="row marginTop20 lightGrayBG">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue marginTop7">Register Profile</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Register Profile</div>
         <div class="col-xs-12 col-sm-6 txtBlue font1dot5em"><span class="stepCount">Step <span class="badge alert-info font1em">2</span> of <span class="badge alert-info font1em">4</span><span></div>
       </div>
 
@@ -244,9 +244,9 @@
             <input class="form-control">
           </div>
         
-          <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Write about your hobbies</label>
+          <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Hobbies</label>
           <div class="col-sm-3">
-            <input class="form-control">
+            <textarea class="form-control" ></textarea>
           </div>
         </div>
 		<div class="form-group">
@@ -295,7 +295,7 @@
         
           <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Write about your hobbies</label>
           <div class="col-sm-3">
-            <input class="form-control" />
+            <textarea class="form-control" ></textarea>
           </div>
         </div>
         <div class="form-group">
