--- a/html/EstablishProfile-Step4.html
+++ b/html/EstablishProfile-Step4.html
@@ -122,8 +122,8 @@
             </ol>
         </div>
 	</div>
-    <section> <div class="row marginTop20 lightGrayBG">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue marginTop7">Register Profile</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Register Profile</div>
         <div class="col-xs-12 col-sm-6 txtBlue font1dot5em"><span class="stepCount">Step <span class="badge alert-info font1em">4</span> of <span class="badge alert-info font1em">4</span><span></div>
       </div>
       <div class="row">
@@ -156,7 +156,7 @@
             <input class="form-control">
           </div>
        </div>
-        <div class="form-group">
+        <div class="form-group required">
           <label class="col-sm-4 control-label">Date of Issue</label>
           <div class="col-sm-6 ">
                <div class="input-append date form-control" id="dp3" data-date-format="dd-mm-yyyy">
@@ -186,7 +186,7 @@
         </div>
       </div>
       <!-- /.form-horizontal --></div>
-      	<div class="col-sm-5 marginTop20">
+      	<div class="col-sm-5 marginTop20 LeftDivider">
         <img src="images/registerFiller.jpg" width="388" height="408" alt="" class="img-responsive"/> </div>        
       </div>
       
