--- a/html/ManageProfile-Step3.html
+++ b/html/ManageProfile-Step3.html
@@ -112,18 +112,18 @@
             </ol>
         </div>
 	</div>
-    <section> <div class="row marginTop20 lightGrayBG">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue marginTop7">Manage Profile</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Manage Profile</div>
       </div>
-      <div class="row marginTop20">
+      <div class="row marginTop10">
         <div class="col-sm-3 leftNav"><!--Left Nav-->
           <div class="row">
             <div class="col-xs-12">
               <ul class="nav nav-pills tabPills  nav-stacked">
                 <li><a href="MyApplication.html">My Page</a></li>
                 <li class="active"><a href="javascript:void(0)">Manage Profile</a></li>
-                <li><a href="childResidentialFacility.html">Search Child Residential Facility</a></li>
-			<li><a href="fosterCareAgency.html">Search Foster Care Agency</a></li>
+                <li><a href="childResidentialFacility.html">Lookup Child Residential Facilities</a></li>
+			<li><a href="fosterCareAgency.html">Lookup  Foster Care Agencies</a></li>
 <li><a href="inbox.html">Inbox</a></li>
               </ul>
             </div>
@@ -147,7 +147,7 @@
       	<div class="col-sm-7"> <div class="form-horizontal marginTop20">
         <div class="form-group required">
           <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please provide as much information to describe you and your family. </label>
-          <div class="col-sm-6">
+          <div class="col-sm-6 paddingTop7">
             <textarea type="text" class="form-control">We have three members in our family. 2 adults and 1 child. We are living in our own house with modern facilities.</textarea>
           </div>
         </div>
@@ -196,8 +196,8 @@
             </div>
             <div class="form-group required">
               <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Hobbies</label>
-              <div class="col-sm-6">
-                <input class="form-control" value="Soccer">
+              <div class="col-sm-6 paddingTop7">
+                <textarea type="text" class="form-control">Soccer</textarea>
               </div>
             </div>
           </div>
@@ -221,15 +221,15 @@
             </div>
             <div class="form-group required">
               <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Hobbies</label>
-              <div class="col-sm-6">
-                <input class="form-control">
+              <div class="col-sm-6 paddingTop7">
+                <textarea type="text" class="form-control"></textarea>
               </div>
             </div>
           </div>
         </div>
         <div class="form-group required">
           <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please be open in expressing your Kids behaviour, emotional and other preferences</label>
-          <div class="col-sm-6">
+          <div class="col-sm-6 paddingTop7">
             <textarea type="text" class="form-control">We have a school going kid, age around 7 years. Kid is highly enthusiastic, proactive and good in studies. He is fun loving and enjoy playing soccer</textarea>
           </div>
         </div>
@@ -241,7 +241,7 @@
         </div>
       </div>
           <!-- /.form-horizontal --></div>
-      	<div class="col-sm-5 marginTop20">
+      	<div class="col-sm-5 marginTop20 LeftDivider">
         <img src="images/registerFiller.jpg" width="388" height="408" alt="" class="img-responsive"/> </div>        
       </div>
           
