--- a/html/default.html
+++ b/html/default.html
@@ -128,7 +128,7 @@
 <h4>your little effort can make the</h4>
 <h4>great difference in someone’s life</h4>
 <h2>BECOME A FOSTER PARENT.</h2></div><br/>
-      <h3><a href="EligibilityCriteria.html" class="carouselContentBG">Family Registration <i class="glyphicon glyphicon glyphicon-forward"></i></a></h3>
+      <h3 class="carouselContentBG" style="display:inline-block"><a href="EligibilityCriteria.html" class="">Family Registration</a> <i class="glyphicon glyphicon glyphicon-forward"></i></h3>
        
       </div>
     </div>
