--- a/html/EstablishProfile-Step3.html
+++ b/html/EstablishProfile-Step3.html
@@ -121,8 +121,8 @@
             </ol>
         </div>
 	</div>
-    <section> <div class="row marginTop20 lightGrayBG">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue marginTop7">Register Profile</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Register Profile</div>
         <div class="col-xs-12 col-sm-6 txtBlue font1dot5em"><span class="stepCount">Step <span class="badge alert-info font1em">3</span> of <span class="badge alert-info font1em">4</span><span></div>
       </div>
       <div class="row">
@@ -139,7 +139,7 @@
       	<div class="col-sm-7"> <div class="form-horizontal marginTop20">
         <div class="form-group required">
           <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please provide as much information to describe you and your family. </label>
-          <div class="col-sm-6">
+          <div class="col-sm-6 paddingTop7">
             <textarea type="text" class="form-control"></textarea>
           </div>
         </div>
@@ -188,7 +188,7 @@
             <div class="form-group required">
               <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Hobbies</label>
               <div class="col-sm-6">
-                <input class="form-control">
+                <textarea class="form-control" ></textarea>
               </div>
             </div>
           </div>
@@ -213,14 +213,14 @@
             <div class="form-group required">
               <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Hobbies</label>
               <div class="col-sm-6">
-                <input class="form-control">
+                <textarea class="form-control" ></textarea>
               </div>
             </div>
           </div>
         </div>
         <div class="form-group required">
           <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please be open in expressing your Kids behaviour, emotional and other preferences</label>
-          <div class="col-sm-6">
+          <div class="col-sm-6 paddingTop7">
             <textarea type="text" class="form-control"></textarea>
           </div>
         </div>
@@ -231,7 +231,7 @@
         </div>
       </div>
       <!-- /.form-horizontal --></div>
-      	<div class="col-sm-5 marginTop20">
+      	<div class="col-sm-5 marginTop20 LeftDivider">
         <img src="images/registerFiller.jpg" width="388" height="408" alt="" class="img-responsive"/> </div>        
       </div>
      
