--- a/html/ManageProfile-Step2.html
+++ b/html/ManageProfile-Step2.html
@@ -112,18 +112,18 @@
             </ol>
         </div>
 	</div>
-    <section> <div class="row marginTop20 lightGrayBG">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue marginTop7">Manage Profile</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Manage Profile</div>
       </div>
-      <div class="row marginTop20">
+      <div class="row marginTop10">
         <div class="col-sm-3 leftNav"><!--Left Nav-->
           <div class="row">
             <div class="col-xs-12">
               <ul class="nav nav-pills tabPills  nav-stacked">
                 <li><a href="MyApplication.html">My Page</a></li>
                 <li class="active"><a href="javascript:void(0)">Manage Profile</a></li>
-                <li><a href="childResidentialFacility.html">Search Child Residential Facility</a></li>
-			<li><a href="fosterCareAgency.html">Search Foster Care Agency</a></li>
+                <li><a href="childResidentialFacility.html">Lookup Child Residential Facilities</a></li>
+			<li><a href="fosterCareAgency.html">Lookup  Foster Care Agencies</a></li>
 <li><a href="inbox.html">Inbox</a></li>
               </ul>
             </div>
@@ -259,9 +259,9 @@
                 <input class="form-control" value="$50,000">
               </div>
             
-                  <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Write about your hobbies</label>
-                  <div class="col-sm-3">
-                    <input class="form-control" value="Reading">
+                  <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Hobbies</label>
+                  <div class="col-sm-3 paddingTop7">
+                    <textarea class="form-control" >Reading</textarea>
                   </div>
                 </div>
                 <div class="form-group">
@@ -316,8 +316,8 @@
               </div>
             
               <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Write about your hobbies</label>
-              <div class="col-sm-3">
-			  <input class="form-control" value="Travelling, Reading Books">
+              <div class="col-sm-3 paddingTop7">
+			  <textarea class="form-control" >Travelling, Reading</textarea>
              </div>
             </div>
             <div class="form-group">
