--- a/html/MyApplication.html
+++ b/html/MyApplication.html
@@ -111,18 +111,18 @@
             </ol>
         </div>
 	</div>
-    <section> <div class="row marginTop20 lightGrayBG">
-        <div class="col-xs-12 col-sm-6 h1 txtBlue marginTop7">My Page</div>
+    <section> <div class="row marginTop7 lightGrayBG">
+        <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">My Page</div>
       </div>
-      <div class="row marginTop20">
+      <div class="row marginTop10">
         <div class="col-sm-3 leftNav"><!--Left Nav-->
         <div class="row">
         <div class="col-xs-12">
           <ul class="nav nav-pills tabPills  nav-stacked">
             <li class="active"><a href="MyApplication.html">My Page</a></li>
             <li><a href="ManageProfile-Step1.html">Manage Profile</a></li>
-            <li><a href="childResidentialFacility.html">Search Child Residential Facility</a></li>
-			<li><a href="fosterCareAgency.html">Search Foster Care Agency</a></li>
+            <li><a href="childResidentialFacility.html">Lookup Child Residential Facilities</a></li>
+			<li><a href="fosterCareAgency.html">Lookup  Foster Care Agencies</a></li>
 <li><a href="inbox.html">Inbox</a></li>
           </ul>
         </div>
