--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,26 +1,40 @@
+<!doctype html>
 <html ng-app="chhsDemo">
 
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>CHHS Demo</title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- IE required polyfills, in this exact order -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.33.3/es6-shim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.20/system-polyfills.js"></script>
+    <script src="https://npmcdn.com/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
     <link rel="stylesheet" href="contents/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.min.css">
     <link rel="stylesheet" href="bower_components/angular-dialog-service/dist/dialogs.css">
     <link rel="stylesheet" href="contents/css/portal.css">
+    <link rel="stylesheet" href="contents/css/font-awesome.min.css">
+    <link href="contents/css/datepicker.css" rel="stylesheet">
 
+
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
   <toaster-container toaster-options="{'time-out': 6000, 'close-button': true}"></toaster-container>
-  <div class="container whitebg">
-    <div class="MainContainer">
-      <movie-app></movie-app>
-    </div>
-    <footer-note></footer-note>
-  </div>
+
+      <main-app></main-app>
+      <footer-note></footer-note>
+
+
     <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/bootstrap-datepicker.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-component-router/angular_1_router.js"></script>
     <script src="bower_components/angular-cache/dist/angular-cache.js"></script>
@@ -32,10 +46,8 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="app/appModule.js"></script>
-    <script src="app/components/movieList.component.js"></script>
-    <script src="app/components/movieRating.component.js"></script>
+    <script src="app/components/mainScript.component.js"></script>
     <script src="app/components/mainApp.component.js"></script>
-    <script src="app/components/movieDetails.component.js"></script>
     <script src="app/components/home.component.js"></script>
     <script src="app/services/dataService.js"></script>
     <script src="app/services/userService.js"></script>
@@ -44,38 +56,10 @@
     <script src="app/components/familyRegistrationEligibility.component.js"></script>
     <script src="app/components/familyRegistrationProfile.component.js"></script>
     <script src="app/components/login.component.js"></script>
-
+    <script src="app/components/userHome.component.js"></script>
 
     <script src="scripts/bootstrap.min.js"></script>
-    <script src="./test.js"></script>
-    <script language="javascript">
 
-function moveSecondaryNav() {
-        var windowWidth = $(window).width();
-        if (windowWidth < 767) {
-            $("#loginBoxNewPosition").append($("#loginNav"));
-			$("#loginNav").removeClass("loginNav");
-			$("#loginNav").addClass("nav navbar-nav");
-
-        }
-        else {
-            $("#loginNavContainer").append($("#loginNav"));
-			$("#loginNav").removeClass("nav");
-			$("#loginNav").removeClass("navbar-nav");
-			$("#loginNav").addClass("loginNav");
-        }
-    }
-
-    $(document).ready(function () {
-        moveSecondaryNav();
-    });
-
-    $(window).resize(function () {
-        moveSecondaryNav();
-
-    });
-
-</script>
 
 </body>
 
