--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,6 +34,7 @@
 
 
     <script src="scripts/jquery.min.js"></script>
+      <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/bootstrap-datepicker.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-component-router/angular_1_router.js"></script>
@@ -51,16 +52,23 @@
     <script src="app/components/home.component.js"></script>
     <script src="app/services/dataService.js"></script>
     <script src="app/services/userService.js"></script>
+    <script src="app/services/searchService.js"></script>
     <script src="app/components/footer.component.js"></script>
     <script src="app/components/familyRegistration.component.js"></script>
     <script src="app/components/familyRegistrationEligibility.component.js"></script>
     <script src="app/components/familyRegistrationProfile.component.js"></script>
     <script src="app/components/login.component.js"></script>
     <script src="app/components/userHome.component.js"></script>
-
-    <script src="scripts/bootstrap.min.js"></script>
-
-
+    <script src="app/components/childResidentialFacilities.component.js"></script>
+    <script src="app/components/fosterCareAgencies.component.js"></script>
+    <script src="app/components/inbox.component.js"></script>
+    
+    <script src="app/components/userHomeRoot.component.js"></script>
+    <script src="app/components/userStatus.component.js"></script>
+    <script src="app/components/userAccountDetails.component.js"></script>
+    <script src="app/components/userPersonalInformation.component.js"></script>
+    <script src="app/components/userPreferences.component.js"></script>
+    <script src="app/components/userLicense.component.js"></script>
 </body>
 
 </html>
