--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/ngGeolocation/ngGeolocation.js"></script>
     <script src="app/appModule.js"></script>
+    <script src="app/config.js"></script>
     <script src="app/components/mainScript.component.js"></script>
     <script src="app/components/mainApp.component.js"></script>
     <script src="app/components/home.component.js"></script>
@@ -76,3 +77,4 @@
 </body>
 
 </html>
+
