updated images and fixed some design issues

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <title>CHHS Demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
     <!-- IE required polyfills, in this exact order -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.33.3/es6-shim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.20/system-polyfills.js"></script>
@@ -67,7 +68,7 @@
     <script src="app/components/childResidentialFacilities.component.js"></script>
     <script src="app/components/fosterCareAgencies.component.js"></script>
     <script src="app/components/inbox.component.js"></script>
-    
+
     <script src="app/components/userHomeRoot.component.js"></script>
     <script src="app/components/userStatus.component.js"></script>
     <script src="app/components/userAccountDetails.component.js"></script>
@@ -77,4 +78,3 @@
 </body>
 
 </html>
-
